--- a/.github/workflows/sync-issues-to-pages.yml
+++ b/.github/workflows/sync-issues-to-pages.yml
@@ -1,9 +1,21 @@
 name: Sync Issues to GitHub Pages
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # 每天午夜运行一次
-  workflow_dispatch:    # 手动触发
+  issues:
+    types:
+      - opened
+      - edited
+      - closed
+      - reopened
+      - labeled
+      - unlabeled
+  workflow_dispatch:
+  
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build-and-deploy:
