--- a/.github/workflows/sync-issues-to-pages.yml
+++ b/.github/workflows/sync-issues-to-pages.yml
@@ -1,4 +1,4 @@
-name: Sync Issues to GitHub Pages
+name: Deploy static content to Pages
 
 on:
   issues:
@@ -10,29 +10,37 @@ on:
       - labeled
       - unlabeled
   workflow_dispatch:
-  
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
-  build-and-deploy:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
+    env:
+      GH_TOKEN: ${{ github.token }}
+      ISITE_VERSION: v0.1.3
+      ZOLA_VERSION: v0.19.2
+      USER: ${{ github.repository_owner }}
+      REPO: ${{ github.event.repository.name }}
+      BASE_URL: https://myogg.github.io/gitnblog # change to your own domain
+      # Change to below if you are using GitHub Pages
+      # BASE_URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    - name: Get Issues Data
-      id: issues
-      run: |
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Generate markdown
+        run: |
           gh release download $ISITE_VERSION --repo kemingy/isite -p '*Linux_x86_64*' --output isite.tar.gz
           tar zxf isite.tar.gz && mv isite /usr/local/bin
           isite generate --user $USER --repo $REPO
@@ -49,25 +57,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
-
-    - name: Generate Static Site
-      run: |
-        # 创建一个简单的 HTML 文件来展示 Issues
-        echo "<!DOCTYPE html><html><head><title>Issues</title></head><body>" > index.html
-        echo "<h1>GitHub Issues</h1>" >> index.html
-        echo "<ul>" >> index.html
-        for issue in $(echo ${{ steps.issues.outputs.issues }}); do
-          TITLE=$(echo $issue | jq -r '.title')
-          NUMBER=$(echo $issue | jq -r '.number')
-          BODY=$(echo $issue | jq -r '.body' | sed 's/</&lt;/g; s/>/&gt;/g')  # 简单转义 HTML 标签
-          echo "<li><a href='https://github.com/${{ github.repository }}/issues/$NUMBER'>#$NUMBER $TITLE</a><br>$BODY</li>" >> index.html
-        done
-        echo "</ul>" >> index.html
-        echo "</body></html>" >> index.html
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: .
-        publish_branch: gh-pages
