--- a/.github/workflows/sync-issues-to-pages.yml
+++ b/.github/workflows/sync-issues-to-pages.yml
@@ -23,7 +23,7 @@ jobs:
         pip install requests PyGithub markdown feedgen lxml marko
 
     - name: Run sync script
-      run: python generate_issues.py $GITHUB_TOKEN $REPO_NAME
+      run: python main.py $GITHUB_TOKEN $REPO_NAME
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         REPO_NAME: ${{ github.repository }}
