--- a/.github/workflows/sync-issues-to-pages.yml
+++ b/.github/workflows/sync-issues-to-pages.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Run sync script
       run: python main.py $GITHUB_TOKEN $REPO_NAME
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.G_KEY }}
         REPO_NAME: ${{ github.repository }}
