--- a/.github/workflows/sync_issues_to_pages.yml
+++ b/.github/workflows/sync_issues_to_pages.yml
@@ -26,7 +26,7 @@ jobs:
         pip install PyGithub
 
     - name: Generate Markdown from Issues
-      run: python main.py
+      run: python mina.py
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
